--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -38,5 +38,9 @@
   "delete": {
     "message": "Delete",
     "description": ""
+  },
+  "settings_theme": {
+    "message": "Theme",
+    "description": ""
   }
 }
