--- a/locales/zh/messages.json
+++ b/locales/zh/messages.json
@@ -1,10 +1,10 @@
 {
   "extensionName": {
-    "message": "QuickGo",
+    "message": "QuickGo 外链直达 — 无感知自动跳过知乎、简书、掘金、CSDN、少数派、Gitee 等网站的安全中心跳转限制",
     "description": ""
   },
   "extensionDescription": {
-    "message": "摆脱网站安全跳转限制，让访问更顺畅。",
+    "message": "你是不是经常在知乎、CSDN、掘金、简书等网站上点击外链，却被拦截到一个“安全中心”，还得再点一次才能继续？太麻烦了！QuickGo 帮你自动绕过安全跳转，无感知直达目标页面，节省时间，让你的浏览体验更丝滑！你想去哪就去哪，畅行无阻！时时刻刻快人一步！",
     "description": ""
   },
   "confirm": {
