--- a/locales/zh_CN/messages.json
+++ b/locales/zh_CN/messages.json
@@ -4,7 +4,7 @@
     "description": ""
   },
   "extensionDescription": {
-    "message": "你是不是经常在*乎、*书、掘*金、C**N、少数派、Gi**e等网站上点击外链，却被拦截到一个“安全中心”，还得再点一次才能继续？太麻烦了！QuickGo 帮你自动绕过安全跳转，无感知直达目标页面，节省时间，让你的浏览体验更丝滑！你想去哪就去哪，畅行无阻！时时刻刻快人一步！",
+    "message": "你是不是经常在*乎、*书、掘*金、C**N、少数派、Gi**e等网站上点击外链，却被拦截到“安全中心”，还得再点一次才能继续？太麻烦了！QuickGo 帮你自动绕过安全跳转，无感知直达目标页面，节省时间，浏览体验更丝滑！想去哪就去哪，畅行无阻！时时刻刻快人一步！",
     "description": ""
   },
   "confirm": {
