--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -27,7 +27,7 @@
     "message": "Create",
     "description": ""
   },
-  "disable": {
+  "disabled": {
     "message": "Disable",
     "description": ""
   },
