--- a/locales/zh_CN/messages.json
+++ b/locales/zh_CN/messages.json
@@ -27,7 +27,7 @@
     "message": "创建",
     "description": ""
   },
-  "disable": {
+  "disabled": {
     "message": "禁用",
     "description": ""
   },
